correction bug dans sgserver et modif macp.schema.yaml
